# telecom-support-copilot

./: LICENSE  README.md  pytest.ini  requirements.txt
.claude/: settings.json
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: analytics.py  asr.py  assist.py  benchmark.py  generate.py  health.py  kb.py  ser.py  websocket.py
backend/app/core/: call_log.py  config.py
backend/app/models/: schemas.py
backend/app/pipeline/: asr.py  ensemble.py  fusion.py  kb_loader.py  live.py  llm.py  mock.py  rag.py  ser.py
backend/app/pipeline/artifacts/: ser_stack.json
data/call_logs/: calls.jsonl
data/kb/: 01_diagnose_general.md  02_router_reboot.md  03_cable_check.md  04_router_indicators.md  05_wifi_no_connection.md  README.md  (+20 more)
eval/: _dump_for_ceiling.py  _dump_pairs.py  _gold_beeline.json  _gold_megafon.json  _gold_mts.json  _gold_rostelecom.json  _gold_tele2.json  _inspect_gigaam.py  _kb_catalog.json  _merge_cases.py  _predict_4class.py  _reembed_text.py  _show_rag.py  _sig_ensemble.py  _sig_test.py  asr_compare.py  asr_gigaam_hf.py  asr_gigaam_onnx.py  asr_multi.py  asr_table.py  audit_dataset.py  auto_pipeline.py  bad_fix_llm.py  bad_fix_nli.py  bad_fix_regex.py  badfix_unmap.py  bench_latency.py  bench_model.py  benchmark.py  bo3_analyze.py  bo3_combined.py  bo3_ensemble.py  bo3_master.py  bo3_model_gen.py  build_emo_blind.py  build_hard_subset.py  ceiling_aggregate.py  ceiling_judge.py  check_dusha_source.py  combine_test.py  (+117 more)
frontend/: package-lock.json  package.json  tailwind.config.ts
scripts/: append_kb.py  check_real_rag.py  download_candidates.py  download_hf.py  download_llms.py  download_model.py  download_models2.py  fetch_test_audio.py  finish_gguf.py  index_kb.py  make_eli5_pdf.py  make_emotion_pdf.py  make_explainer_pdf.py  make_fusion_pdf.py  md_to_pdf.py  scan_perms.ps1  synth_audio.py  synth_dialogs.py  test_asr_medium.py  test_operator_context.py  test_ws.py  transcribe_dusha.py  warmup_llm.py  warmup_ser.py
sdk/: copilot_client.py  pyproject.toml
sdk/telecom_copilot/: __init__.py  client.py
tests/: conftest.py  test_integration_assist.py  test_kb_loader.py  test_schemas.py  test_sdk.py
(+293 files in other folders)
