[project]
name = "telecom-copilot-backend"
version = "0.1.0"
description = "LLM Copilot for Russian Telecom Call Center Support - Backend"
requires-python = ">=3.11,<3.13"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # ML core (PyTorch with CUDA 12.x — see [tool.uv.sources] below)
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "transformers>=4.46.0",
    "accelerate>=1.0.0",

    # ASR
    "faster-whisper>=1.0.3",  # fallback ASR
    "soundfile>=0.12.1",
    "librosa>=0.10.2",
    "silero-vad>=5.1",
    "omegaconf>=2.3.0",  # требуется Silero TTS

    # Embeddings & RAG
    "sentence-transformers>=3.2.0",
    "chromadb>=0.5.15",  # embedded vector DB, no Docker
    "rank-bm25>=0.2.2",  # sparse retrieval

    # LLM serving
    "llama-cpp-python>=0.3.0",  # GGUF inference, works on Windows

    # Utils
    "httpx>=0.27.0",
    "loguru>=0.7.2",
    "rich>=13.9.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0,<2.0",  # некоторые ML-зависимости ещё не на numpy 2

    # Eval
    "razdel>=0.5.0",  # русский sentence splitter для RAGAS
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "ipykernel>=6.29.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
